# writing-ritual

./: .gitignore  mise.toml  spacetime.json
.github/workflows/: ci.yml  deploy.yml
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs  model.rs  use_cases.rs
web/: package-lock.json  package.json
web/src/app/: AppShell.tsx  layout.tsx  not-found.tsx  page.tsx
web/src/components/: MainView.tsx  RitualView.tsx
web/src/module_bindings/: current_book_view_table.ts  current_word_votes_table.ts  index.ts  my_vote_table.ts  types.ts  vote_for_word_reducer.ts
web/src/module_bindings/types/: reducers.ts
