[package]
name = "hive_author"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.0.2", features = ["rand"] }
log = "0.4"
rand = "0.8"
fxhash = "0.2.1"
